Add comments and minor cleanup

--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <!-- Look up how to change this dynamically based on which site the user is on. Does the H1 element change this somehow? -->
     <title>SMDb</title>
   </head>
   <body>
